# sqss

./: .editorconfig  .gitignore  README.md  poetry.toml  pyproject.toml
sqss/: __init__.py  __main__.py
sqss/core/: compiler.py  morpheme.py  scope.py
sqss/core/macro/: __init__.py  abs_macro.py  include.py  mixin.py
sqss/core/property/: __init__.py
sqss/core/selector/: __init__.py  attr_sel.py  pseudo_class.py  rule.py  sub_control.py
sqss/core/variable/: fun.py  num.py  str.py  var.py
sqss/exception/: CompileException.py  ValAssignedSetException.py
sqss/util/: string_util.py
sqss/util/cli/: command.py
src/: __init__.py  __main__.py
src/core/: compiler.py  morpheme.py  scope.py
src/core/macro/: __init__.py
src/core/property/: __init__.py
src/core/selector/: __init__.py  attr_sel.py  pseudo_class.py  rule.py  sub_control.py
src/core/variable/: fun.py  num.py  str.py  var.py
src/util/cli/: command.py
test/: testCompiler.py  testSelector.py
test/sqss/: compile_marco.sqss
