[tool.poetry]
name        = "sqss"
version     = "0.1.0"
description = "pyqt's simple qss."
authors     = ["yijie <yijie4188@gmail.com>"]
license     = "MIT"

[tool.poetry.dependencies]
toml = "^0.10.2"
  [dependencies]
  python = "^3.9"
  toml = "^0.10.2"
  [dev-dependencies]
    [[source]]
    name    = "aliyun"
    url     = "https://mirrors.aliyun.com/pypi/simple"
    default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
