[tool.poetry]
name        = "sqss"
version     = "0.1.0"
description = "pyqt's simple qss."
authors     = ["yijie <yijie4188@gmail.com>"]
license     = "MIT"
keywords    = [
  "compiler", "qss", "qt"
]

  [[tool.poetry.source]]
  name    = "aliyun"
  url     = "https://mirrors.aliyun.com/pypi/simple"
  default = true

  [tool.poetry.scripts]

  [tool.poetry.dependencies]
  python = "^3.9"
  toml = "^0.10.2"

  [tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
